fix: adjust header styles for consistent text alignment and link appearance

--- a/styles.css
+++ b/styles.css
@@ -10,4 +10,9 @@ header{
     background-color: whitesmoke;
     padding:24px 0;
     color: chocolate;
+    text-align: center;
+}
+header a{
+    text-decoration: none;
+    color:chocolate
 }
